# routes/web.php
@@ -1,7 +1,16 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\BookController;
 
-Route::get('/', function () {
-    return view('welcome');
-});
+Route::get('/', function(){
+    return view('pages.home');
+})->name('home');
+
+Route::get('/book', function (){
+    return view('pages.plp');
+})->name('plp');
+
+Route::get('/book/{i}', function () {
+    return view('pages.pdp');
+})->name('pdp');
